fetch data from api and return return random results

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="stylesheet" href="style.css">
+    <title>Random User Generator</title>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <div id="app">
+      <img :class="gender":src="picture" alt="">
+         <h1>{{firstName}} {{lastName}}</h1>
+         <h3>Email :{{email}}</h3>
+         <button v-on:click="getUser()" :class="gender">Get Random User</button>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+
+    <script src="java.js"></script>
   </body>
 </html>
